--- a/Matrix/Matrix.csproj
+++ b/Matrix/Matrix.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Matriz.cs" />
+    <Compile Include="Neo.cs" />
+    <Compile Include="Personajes.cs" />
+    <Compile Include="Methods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Random.cs" />
+    <Compile Include="Smith.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
