Clases casi completas y programa empezado
Clases completas a parte de ir completando segun se vaya haciendo el programa principal y programa principal ya comenzado, hace lista de personajes e imprime su nombre y ciudad.

--- a/Matrix/Matrix.csproj
+++ b/Matrix/Matrix.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Matriz.cs" />
     <Compile Include="Neo.cs" />
-    <Compile Include="Personajes.cs" />
+    <Compile Include="Personaje.cs" />
     <Compile Include="Methods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -53,6 +53,7 @@
     <Compile Include="Smith.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".editorconfig" />
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
