Turno personajes incompleto pero funcional
No se eliminan personajes de la lista y si pongo para que se eliminen me empiezan a saltar excepciones

--- a/Matrix/Matrix.csproj
+++ b/Matrix/Matrix.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Celda.cs" />
     <Compile Include="Matriz.cs" />
     <Compile Include="Neo.cs" />
     <Compile Include="Personaje.cs" />
