--- a/Matrix/Matrix.csproj
+++ b/Matrix/Matrix.csproj
@@ -43,8 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Celda.cs" />
-    <Compile Include="Matriz.cs" />
+    <Compile Include="C:\Users\Lukitass\Desktop\ProyectoMatrix\Matrix Lucas de Diego Martinez.cs" />
     <Compile Include="Neo.cs" />
     <Compile Include="Personaje.cs" />
     <Compile Include="Methods.cs" />
